# 2529-chewing-detection

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  ML_INTEGRATION.md  README.md  fly.toml  inspect_model.py  main.py  main_websocket.py  mediapipe.py  mediapipe_app.py  mediapipe_soshaku_221004.py  pyproject.toml  requirements.txt  training.py  training_config.yaml  video_to_train_data.py
camera-test/: camera_cv2_test.py
data/: sample_face_landmarks.pickle
data/model/004/: lgb_1.model
data/model/005/: lgb_1.model
data/model/009/: lgb_1.model  lgb_2.model
data/model/010/: lgb_1.model
data/model/011/: lgb_1.model
data/model/013/: lgb_1.model  lgb_2.model
data/model/014/: lgb_1.model  lgb_2.model
data/model/016/: lgb_1.model  lgb_2.model
data/model/017/: lgb_1.model  lgb_4.model
data/model/019/: lgb_1.model  lgb_2.model
data/model/023/: lgb_1.model  lgb_2.model
data/model/025/: lgb_1.model  lgb_2.model
data/model/027/: lgb_1.model  lgb_2.model
data/raw_data/: 1_for_test.pickle
test/: camera_cv2_test.py  test_predictor.py
util/: __init__.py  camera_config.py  chewing_detector.py  color.py  face_direction.py  face_landmarker_runner.py  landmark_metrics.py  mediapipe_runner.py  ml_predictor.py
