[project]
name = "cheeew-detectino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "opencv-python>=4.13.0.90",
    "ruff>=0.14.13",
    "srt>=3.5.3",
    "tqdm>=4.67.2",
]
